# Gyoza3d

./: CMakeLists.txt  Gyoza.kdev4
data/: data_component.hpp
physic/src/: physic_component.cpp  physic_component.hpp
render/include/: material.hpp  mesh.hpp  primitives.hpp  render_manager.hpp  setup.hpp  texture.hpp  vertex.hpp  window.hpp
render/include/lib/: shader.hpp
render/shaders/: light_shader.fs  light_shader.vs  normal.fs
render/src/: mesh.cpp  render_component.cpp  render_component.hpp  render_manager.cpp  render_manager.hpp  texture.cpp  vertex.cpp  vertex.hpp  window.cpp
render/src/lib/: camera.cpp  fly_camera.cpp  fps_camera.cpp  shader.cpp  stb_image.cpp
render/src/render_components_constructors/: cuber_render_component.cpp  cuber_render_component.hpp  sphere_render_component.cpp  sphere_render_component.hpp
resources/include/: magic_container.hpp  resource_manager.hpp
resources/src/: magic_container.cpp  resource_manager.cpp  resource_manager.hpp
shapes/: shape.hpp
src/: constants.hpp  main.cpp
src/render/: .render_component.cpp.kate-swp  render_component.cpp  render_component.hpp  texture.hpp  vertex.hpp
src/render/lib/: fly_camera.cpp  fps_camera.cpp  shader.cpp
src/render/render_components_constructors/: cuber_render_component.cpp  cuber_render_component.hpp
src/resources/: resource_manager.hpp
